Agregado google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ author: Luis Reinoso
 github: https://github.com/luisreinoso
 about: Programador, software libre.
 disqus_shortname: ideario
-google_analytics: UA-XXXXXXXX-Y
+google_analytics: UA-127486975-1
 
 enableTags: true
 tagarray: []
