Agregado estilos para fechas, categorias de post, shared buttons, descripcion de usuario

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Ideario
 description: Blog personal de Luis Reinoso
 author: Luis Reinoso
 github: https://github.com/luisreinoso
-about: Programador, software libre.
+about: Freelance developer
 disqus_shortname: ideario
 google_analytics: UA-127486975-1
 
