feat: Increase site font size, replace icons with emojis and improve menu links.

--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,8 @@ share:
   # fb_appid: 1749788565247320
 
 urls:
+    - text: Home
+      url: /
     - text: Sobre mi
       url: /about/
     - text: Proyectos
