fix: Update description.

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Ideario
 description: Blog personal de Luis Reinoso
 author: Luis Reinoso
 github: https://github.com/luisreinoso
-about: Freelance developer. I usually give ⭐ on Github (javascript, python, angular 🅰️). Veggie/Vegan 🥑🍓. Believe In Yourself.
+about: Freelance developer. I usually give ⭐ on Github (javascript, python, angular 🅰️). Veggie 🥑🍓. Believe In Yourself.
 disqus_shortname: ideario
 google_analytics: UA-127486975-1
 
